# MiniGit-Version-Control-System

./: CMakeLists.txt  README.md
docs/: Architecture.md
include/: BinaryHeap.hpp  CommandJournal.hpp  CommandProcessor.hpp  Common.hpp  FileRegistry.hpp  FileVersion.hpp  KmpPatternMatcher.hpp  PointerIndexMap.hpp  TreeNode.hpp  VersionIndex.hpp
src/: CommandJournal.cpp  CommandProcessor.cpp  FileRegistry.cpp  FileVersion.cpp  KmpPatternMatcher.cpp  PointerIndexMap.cpp  TreeNode.cpp  VersionIndex.cpp  main.cpp
tests/: test.txt
